--- a/apple.css
+++ b/apple.css
@@ -1,10 +1,11 @@
 body{
     background-color: rgb(242, 233, 233);
+    color: black;
     header{
         padding-left: 100px;
-        word-spacing: 40px;
-        font-style: 100px;
+        font-style:normal;
         font-size: small;
+        margin-right: 60%;
     }
     h1{
         font-style: 30px;
@@ -16,13 +17,13 @@ body{
     h4{
         text-align: center;
         background-color: white;
+        height: 50px;
+        font-size: 15px;
         font-style:normal;
-        font-size: large;
+        
     }
     img{
         padding-left: 150px;
-        background-color: black;
-        background-size:cover;
     }
     p{
         padding-left: 150px;
