--- a/apple.css
+++ b/apple.css
@@ -5,7 +5,9 @@ body{
         padding-left: 100px;
         font-style:normal;
         font-size: small;
-        margin-right: 0%;
+    }
+    a{
+        margin-left: 40px;
     }
     h1{
         font-style: 30px;
@@ -20,7 +22,7 @@ body{
         height: 50px;
         font-size: 15px;
         font-style:normal;
-        
+        padding-left: 10px;
     }
     img{
         padding-left: 150px;
