--- a/apple.css
+++ b/apple.css
@@ -26,7 +26,7 @@ body{
         padding-top: 30px;
     }
     img{
-        display:inline;   
+        display:inline-table;   
         background-color: black;
     }
     p{
